nav working on mobile and desktop, fixed horizontal scroll

--- a/src/components/Homepage/header.scss
+++ b/src/components/Homepage/header.scss
@@ -2,6 +2,10 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  overflow-x: hidden;
+  a{
+    text-decoration: none;
+  }
 }
 .App-header h1{
  padding: 2rem;
