--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -1,13 +1,23 @@
 
 footer{
-  background-color: lightslategray;
-  width: 100%;
+  background-color: #282C34;
   padding: 2rem 0.5rem;
-}
+  a{
+    text-decoration: none;
+    color: whitesmoke;
+  }
+  a:hover{
+    color: #5dfdc8
+  }
+  ul{
+    list-style-type: none;
+    display: flex;
+    justify-content: space-between;
+    padding: 0 2rem;
+    li{
+      color: whitesmoke;
+    }
+  }
+ 
 
-ul{
-  list-style-type: none;
-  display: flex;
-  justify-content: space-between;
-  padding: 0 2rem;
 }
