--- a/src/components/workshopContent/content.scss
+++ b/src/components/workshopContent/content.scss
@@ -40,7 +40,7 @@
     background-color: rgb(48, 45, 56);
     color: whitesmoke;
     padding: 2rem;
-    border-left: 3px solid rgb(93, 253, 200);
+    border-left: 5px solid rgb(93, 253, 200);
     text-align: left;
     margin: 2rem 0;
     white-space: pre-wrap;       /* Since CSS 2.1 */
@@ -54,6 +54,22 @@
     
   }
   pre:hover{
-    border-left: 3px solid rgb(255, 0, 212);
+    border-left: 5px solid rgb(255, 0, 212);
   }
+}
+
+.backToTop{
+  position: fixed;
+  display: flex;
+  text-decoration: none;
+  align-items:  center;
+  justify-content: center;
+  width: 20px;
+  height: 20px;
+  opacity: 0;
+  transition: all .5s;
+}
+
+.backToTop.active{
+  opacity: 1;
 }
